Uni/year2/TMA02Q1SolDSB/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\kazbe\Documents\OU\Y2\M250\Assignments\TMA02\TMA02Download\TMA02Q1SolDSB
-d
C:\Users\kazbe\Documents\OU\Y2\M250\Assignments\TMA02\TMA02Download\TMA02Q1SolDSB\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\kazbe\Documents\OU\Y2\M250\Assignments\TMA02\TMA02Download\TMA02Q1SolDSB\BirthdaySimulation.java
<---- end of javadoc command ---->
Loading source file C:\Users\kazbe\Documents\OU\Y2\M250\Assignments\TMA02\TMA02Download\TMA02Q1SolDSB\BirthdaySimulation.java...
C:\Users\kazbe\Documents\OU\Y2\M250\Assignments\TMA02\TMA02Download\TMA02Q1SolDSB\BirthdaySimulation.java:84: error: illegal start of expression
        int aDate = 0; /
                       ^
C:\Users\kazbe\Documents\OU\Y2\M250\Assignments\TMA02\TMA02Download\TMA02Q1SolDSB\BirthdaySimulation.java:85: error: illegal start of expression
        switch (aMonth){
        ^
C:\Users\kazbe\Documents\OU\Y2\M250\Assignments\TMA02\TMA02Download\TMA02Q1SolDSB\BirthdaySimulation.java:85: error: not a statement
        switch (aMonth){
               ^
C:\Users\kazbe\Documents\OU\Y2\M250\Assignments\TMA02\TMA02Download\TMA02Q1SolDSB\BirthdaySimulation.java:85: error: ';' expected
        switch (aMonth){
                       ^
C:\Users\kazbe\Documents\OU\Y2\M250\Assignments\TMA02\TMA02Download\TMA02Q1SolDSB\BirthdaySimulation.java:86: error: orphaned case
            case "January": aDate = ran.nextInt(31-1+1) + 1;
            ^
5 errors
